[package]
name = "slog-scope"
version = "2.0.0-2.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Logging scopes for slog-rs"
keywords = ["slog", "logging", "slog", "log"]
license = "MPL-2.0"
documentation = "https://docs.rs/slog-scope"
homepage = "https://github.com/slog-rs/slog"
repository = "https://github.com/slog-rs/scope"
readme = "README.md"

[lib]
path = "lib.rs"

[dependencies]
slog = "~2.0.0-2"
lazy_static = "0.2.1"
crossbeam = "0.2.9"

[dev-dependencies]
slog-term = "~2.0.0-2"
