[package]
name = "slog-scope"
version = "4.4.1"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Logging scopes for slog-rs"
keywords = ["slog", "logging", "slog", "log"]
license = "MPL-2.0 OR MIT OR Apache-2.0"
documentation = "https://docs.rs/slog-scope"
homepage = "https://github.com/slog-rs/slog"
repository = "https://github.com/slog-rs/scope"
readme = "README.md"

[lib]
path = "lib.rs"

[dependencies]
slog = "2.4"
lazy_static = "1.2"
arc-swap = "1.1"

[dev-dependencies]
slog-term = "2"
slog-async = "2"
